--- a/Colab.ipynb
+++ b/Colab.ipynb
@@ -67,7 +67,7 @@
       "source": [
         "#@markdown ## 3. Split video into chunks (duration in second)\n",
         "import os\n",
-        "fileName = \"angseng4k.mp4\" #@param {type: \"string\"}\n",
+        "fileName = \"input.mp4\" #@param {type: \"string\"}\n",
         "durationPerChunk = 1 #@param {type: \"number\"}\n",
         "%cd /content/arXiv2020-RIFE/input_video\n",
         "os.popen(f\"ffmpeg -i {fileName} -acodec copy -f segment -segment_time {durationPerChunk} -vcodec copy -reset_timestamps 1 -map 0 ./chunks/chunk%d.mp4\").read()"
