--- a/Colab.ipynb
+++ b/Colab.ipynb
@@ -4,8 +4,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1wysVHxoN54f",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "1wysVHxoN54f"
       },
       "outputs": [],
       "source": [
@@ -17,11 +17,20 @@
         "!7z e RIFE_trained_model_v3.6.zip\n",
         "%cd /content/arXiv2020-RIFE/\n",
         "!gdown --id 1i3xlKb7ax7Y70khcTcuePi6E7crO_dFc\n",
-        "!pip3 install -r requirements.txt"
+        "!pip install -r requirements.txt\n",
+        "!pip install moviepy\n",
+        "!pip install imageio==2.4.1\n",
+        "!pip install scikit-video"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "LP0cdyL8DTGt"
+      },
+      "outputs": [],
       "source": [
         "#@markdown ## 2. Prepare Folder\n",
         "import os.path\n",
@@ -53,44 +62,72 @@
         "  shutil.rmtree(\"./input_video/output_chunks\")\n",
         "  os.system(\"mkdir input_video/output_chunks\")\n",
         "else:\n",
-        "  os.system(\"mkdir input_video/output_chunks\")"
-      ],
-      "metadata": {
-        "id": "LP0cdyL8DTGt",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+        "  os.system(\"mkdir input_video/output_chunks\")\n",
+        "\n",
+        "if path.exists(\"./input_video/stable_chunks\"):\n",
+        "  shutil.rmtree(\"./input_video/stable_chunks\")\n",
+        "  os.system(\"mkdir input_video/stable_chunks\")\n",
+        "else:\n",
+        "  os.system(\"mkdir input_video/stable_chunks\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "8bItzJ6WBRaG"
+      },
+      "outputs": [],
       "source": [
         "#@markdown ## 3. Split video into chunks (duration in second)\n",
         "import os\n",
         "fileName = \"input.mp4\" #@param {type: \"string\"}\n",
         "durationPerChunk = 1 #@param {type: \"number\"}\n",
         "%cd /content/arXiv2020-RIFE/input_video\n",
-        "os.popen(f\"ffmpeg -i {fileName} -acodec copy -f segment -segment_time {durationPerChunk} -vcodec copy -reset_timestamps 1 -map 0 ./chunks/chunk%d.mp4\").read()"
-      ],
-      "metadata": {
-        "id": "8bItzJ6WBRaG",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+        "os.system(f\"ffmpeg -i {fileName} -acodec copy -f segment -segment_time {durationPerChunk} -vcodec copy -reset_timestamps 1 -map 0 ./chunks/chunk%d.mp4\")\n",
+        "print(\"Done!\")"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dnLn4aHHPzN3",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "VFXII_EoI9qR"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ## Change all chunk to stable fps (prevent video speed change)\n",
+        "import os, os.path\n",
+        "import sys\n",
+        "\n",
+        "stablefps = \"30\" #@param [\"5\", \"10\", \"20\", \"30\"] {type: \"string\"}\n",
+        "\n",
+        "%cd /content/arXiv2020-RIFE/input_video/\n",
+        "\n",
+        "chunks = len([c for c in os.listdir('./chunks') if os.path.isfile(os.path.join(\"./chunks\", c))])\n",
+        "\n",
+        "for i in range(chunks):\n",
+        "  sys.stdout.write(f\"\\rProcessing {i}/{chunks}\")\n",
+        "  sys.stdout.flush()\n",
+        "  os.system(f\"ffmpeg -i ./chunks/chunk{i}.mp4 -filter:v fps=fps={stablefps} ./stable_chunks/chunk{i}.mp4\")\n",
+        "print(\"Done!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "dnLn4aHHPzN3"
       },
       "outputs": [],
       "source": [
         "#@markdown ## 4. Start Processing\n",
         "!nvidia-smi\n",
         "import os, os.path\n",
+        "import sys\n",
         "\n",
         "exp = 2 #@param {type: \"number\"}\n",
         "fps = 60 #@param {type: \"number\"}\n",
@@ -98,58 +135,78 @@
         "\n",
         "%cd /content/arXiv2020-RIFE\n",
         "\n",
-        "chunks = len([c for c in os.listdir('./input_video/chunks') if os.path.isfile(os.path.join(\"./input_video/chunks\", c))])\n",
+        "chunks = len([c for c in os.listdir('./input_video/stable_chunks') if os.path.isfile(os.path.join(\"./input_video/stable_chunks\", c))])\n",
         "\n",
         "for i in range(chunks):\n",
-        "  print(f\"Processing {i}/{chunks}\")\n",
+        "  sys.stdout.write(f\"\\rProcessing {i}/{chunks}\")\n",
+        "  sys.stdout.flush()\n",
         "  if UHD:\n",
-        "    os.system(f\"python3 inference_video.py --exp={str(exp)} --UHD --fps=str(fps) --output=./input_video/output_chunks/chunk{i}.mp4 --video=./input_video/chunks/chunk{i}.mp4 --skip\")\n",
+        "    os.system(f\"python3 inference_video.py --exp={str(exp)} --UHD --fps={str(fps)} --output=./input_video/output_chunks/chunk{i}.mp4 --video=./input_video/stable_chunks/chunk{i}.mp4 --skip\")\n",
         "  else:\n",
-        "    os.system(f\"python3 inference_video.py --exp={str(exp)} --fps=str(fps) --output=./input_video/output_chunks/chunk{i}.mp4 --video=./input_video/chunks/chunk{i}.mp4 --skip\")\n",
-        "print(\"Done!\")"
+        "    os.system(f\"python3 inference_video.py --exp={str(exp)} --fps={str(fps)} --output=./input_video/output_chunks/chunk{i}.mp4 --video=./input_video/stable_chunks/chunk{i}.mp4 --skip\")\n",
+        "print(\"\\nDone!\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@markdown ## Merge output chunks into 1 file (Optional)\n",
-        "import os, os.path\n",
-        "%cd /content/arXiv2020-RIFE/input_video\n",
-        "output_chunks = len([c for c in os.listdir('./output_chunks') if os.path.isfile(os.path.join(\"./output_chunks\", c))])\n",
-        "\n",
-        "with open(\"chunks_concat.txt\", \"w\") as c:\n",
-        "  for i in range(output_chunks):\n",
-        "    c.write(\"file './output_chunks/chunk{}.mp4'\\n\".format(str(i)))\n",
-        "\n",
-        "%cd output_chunks\n",
-        "!ffmpeg -f concat -safe 0 -i /content/arXiv2020-RIFE/input_video/chunks_concat.txt /content/arXiv2020-RIFE/output/final.mp4"
-      ],
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "HseSE-pTGJi_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#@markdown ## Merge output chunks into 1 file (Optional)\n",
+        "import os, os.path\n",
+        "from moviepy.editor import VideoFileClip, concatenate_videoclips\n",
+        "\n",
+        "%cd /content/arXiv2020-RIFE/input_video\n",
+        "outputChunks = len([c for c in os.listdir('./output_chunks') if os.path.isfile(os.path.join(\"./output_chunks\", c))])\n",
+        "outputVid = []\n",
+        "for i in range(outputChunks):\n",
+        "  outputVid.append(VideoFileClip(\"./output_chunks/chunk{}.mp4\".format(i)))\n",
+        "\n",
+        "final = concatenate_videoclips(outputVid)\n",
+        "final.write_videofile(\"/content/arXiv2020-RIFE/output/final.mp4\")\n",
+        "\n",
+        "%cd output_chunks\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "TydLlGaZISzm"
+      },
+      "outputs": [],
       "source": [
-        "#@markdown ## Zip all output chunk (Optional)\n",
-        "!zip -r /content/arXiv2020-RIFE/output/chunks.zip /content/arXiv2020-RIFE/input_video/output_chunks"
-      ],
+        "#@markdown ## Copy ouput file to drive (Optional)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/mnt/gdrive', force_remount=True)\n",
+        "\n",
+        "!cp /content/arXiv2020-RIFE/output/final.mp4 /mnt/gdrive/MyDrive/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "GPFw7XKlLUea"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#@markdown ## Zip all output chunk (Optional)\n",
+        "!zip -r /content/arXiv2020-RIFE/output/chunks.zip /content/arXiv2020-RIFE/input_video/output_chunks"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dFIIrLv674Fb",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "dFIIrLv674Fb"
       },
       "outputs": [],
       "source": [
@@ -166,11 +223,11 @@
     "colab": {
       "provenance": []
     },
+    "gpuClass": "premium",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
-    },
-    "gpuClass": "premium"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
