--- a/Colab.ipynb
+++ b/Colab.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Install Required stuffs"
+      ],
+      "metadata": {
+        "id": "4gXpVvnnJuA_"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -73,6 +82,43 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@markdown #Method 1: Direct run\n",
+        "!nvidia-smi\n",
+        "import os, os.path\n",
+        "import sys\n",
+        "\n",
+        "inputFileName = \"input.mp4\" #@param {type: \"string\"}\n",
+        "outputFileName = \"output.mp4\" #@param {type: \"string\"}\n",
+        "exp = 2 #@param {type: \"number\"}\n",
+        "fps = 60 #@param {type: \"number\"}\n",
+        "UHD = True #@param {type: \"boolean\"}\n",
+        "\n",
+        "%cd /content/arXiv2020-RIFE\n",
+        "\n",
+        "if UHD:\n",
+        "  !python3 inference_video.py --exp=\"$exp\" --UHD --fps=\"$fps\" --output=./output/\"$outputFileName\" --video=./input_video/\"$inputFileName\" --skip\n",
+        "else:\n",
+        "  !python3 inference_video.py --exp=\"$exp\" --fps=\"$fps\" --output=./output/\"$outputFileName\" --video=./input_video/\"$inputFileName\" --skip"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "_v2Wic8oII_i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Method 2: Split video (For 4k video)"
+      ],
+      "metadata": {
+        "id": "9yOD4rcLI_WS"
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "cellView": "form",
@@ -98,11 +144,11 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown ## Change all chunk to stable fps (prevent video speed change)\n",
+        "#@markdown ## Change all chunk to same fps (prevent video speed change)\n",
         "import os, os.path\n",
         "import sys\n",
         "\n",
-        "stablefps = \"30\" #@param [\"5\", \"10\", \"20\", \"30\"] {type: \"string\"}\n",
+        "stablefps = \"30\" #@param [\"10\", \"20\", \"30\"] {type: \"string\"}\n",
         "\n",
         "%cd /content/arXiv2020-RIFE/input_video/\n",
         "\n",
@@ -112,7 +158,7 @@
         "  sys.stdout.write(f\"\\rProcessing {i}/{chunks}\")\n",
         "  sys.stdout.flush()\n",
         "  os.system(f\"ffmpeg -i ./chunks/chunk{i}.mp4 -filter:v fps=fps={stablefps} ./stable_chunks/chunk{i}.mp4\")\n",
-        "print(\"Done!\")"
+        "print(\"\\nDone!\")"
       ]
     },
     {
@@ -221,7 +267,11 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "4gXpVvnnJuA_",
+        "9yOD4rcLI_WS"
+      ]
     },
     "gpuClass": "premium",
     "kernelspec": {
